[build-system]
requires = ["hatchling"]
build-backend = "hatching.build"


[tool.hatch.build.targets.wheel]
packages = ["db_connections"]

[tool.hatch.build.targets.sdist]
packages = ["db_connections"]

[tool.hatch.build.targets.editable]
packages = ["db_connections"]

[tool.hatch.build.targets.app]
packages = ["db_connections"]

[project]
name = "db_connections"
version = "1.0.0"
description = "A library for connecting to different databases"
author = ["Seyyed Mahmoud Hosseini"]
author-email = "hosseini72@gmail.com"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["database", "connection", "sql", "nosql", "redis", "clickhouse", "mongodb", "postgres", "rabbitmq"] 
packages = ["db_connections"]
dependencies = ["psycopg2-binary", "pymysql", "pymongo", "redis", "motor"]




[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88

[tool.flake8]
max-line-length = 88